# wattbot

./: .gitignore  .pre-commit-config.yaml  README.md  eda.html  eda.html.md  evaluate.html  evaluate.html.md  generator.html  generator.html.md  index.html  index.html.md  pyproject.toml  requirements.txt  retriever.html  retriever.html.md  robots.txt  search.json  settings.ini  sitemap.xml  submission_v1.html  submission_v1.html.md  submission_v2.html  submission_v2.html.md  submission_v3.html  submission_v3.html.md  utils.html  utils.html.md  wattbot_exploration_solveit.html  wattbot_exploration_solveit.html.md  wattbot_sdk_solveit.html  wattbot_sdk_solveit.html.md
nbs/: 00_eda.ipynb  01_retriever.ipynb  02_generator.ipynb  03_evaluate.ipynb  04_submission_v1.ipynb  04_submission_v2.ipynb  04_submission_v3.ipynb  05_utils.ipynb  06_wattbot_exploration_solveit.ipynb  06_wattbot_sdk_solveit.ipynb  index.ipynb  nbdev.yml  sidebar.yml
wattbot/: _modidx.py  core.py  eda.py  evaluate.py  generator.py  retriever.py  utils.py
