[project]
name="wattbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "braintrust>=0.3.9",
    "claudette-pydantic>=0.0.1",
    "contextkit>=0.0.10",
    "docling>=2.63.0",
    "fastcore>=1.8.8",
    "fastembed>=0.7.3",
    "fireworks>=2.0.6",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "langchain>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.9.4",
    "nbdev>=2.4.5",
    "openai>=2.8.1",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "tiktoken>=0.12.0",
]
