[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wattbot"
dynamic = ["version", "dependencies"]
description = "This repository is based on a kaggle competition named Wattbot"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "anubhavmaity", email = "anubhavmaity7@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]

[project.urls]
Repository = "https://github.com/anubhavmaity/wattbot"
Documentation = "https://anubhavmaity.github.io/wattbot"

[project.entry-points.nbdev]
wattbot = "wattbot._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "wattbot.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["wattbot"]

[tool.nbdev]
tst_flags = "notest"